--- a/src/component/Footer/Footer.css
+++ b/src/component/Footer/Footer.css
@@ -1,13 +1,15 @@
 .footer {
-    color: #fff;
-    background-color: #343A40;
-    width: 100%;
-    height: 130px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    text-align: center;
+  position: absolute; 
+  bottom: 0;
+  color: #fff;
+  background-color: #343A40;
+  width: 100%;
+  height: 130px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
   }
 
   /* ==== RESPONSIVE ==== */
