--- a/src/component/Products/ProductPage.css
+++ b/src/component/Products/ProductPage.css
@@ -14,6 +14,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-left: var(--mp-3);
+    margin-right: var(--mp-3);
 }
 
 .product{
@@ -30,7 +32,8 @@
 
 .productDiv h1{
     text-align: center;
-    font-size: 30px;
+    font-size: 25px;
+    margin: auto;
 }
 
 
@@ -38,11 +41,16 @@
     display: flex;
     align-items: flex-end;
     justify-content: space-between;
+    width: 100%;
 }
 
 .variantBody{
     display: flex;
     justify-content: space-between;
+}
+
+.addBtn{
+    margin-left: var(--mp-0-75);
 }
 
 .otherQttContact{
